<resources>
    <string name="app_name">WisCore</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>


    <string name="main_title">WisCore-Alexa</string>
    <string name="main_scan_indicator_title">Scan WisCore</string>
    <string name="main_scan_indicator">Scanning WisCore...</string>
    <string name="main_device_offline">Connect failed,device is offline</string>
    <string name="main_get_ssid_title">Check network</string>
    <string name="main_get_ssid">Checking network...</string>
    <string name="main_get_ssid_timeout">Check network timeout</string>
    <string name="main_get_ssid_failed">Check network failed</string>
    <string name="main_get_device_info_title">Get device information</string>
    <string name="main_get_device_info_text">Getting device information...</string>
    <string name="main_get_device_info_failed">Get device information failed</string>
    <string name="main_get_network_info_title">Get network information</string>
    <string name="main_get_network_info_text">Getting network information...</string>
    <string name="main_get_network_info_failed">Get network information failed</string>
    <string name="main_config_ssid_title">Configure WisCore</string>
    <string name="main_config_ssid">Configuring WisCore...</string>
    <string name="main_config_ssid_timeout">Configure WisCore failed</string>
    <string name="main_config_ssid_error">Wi-Fi network can not be empty</string>
    <string name="main_config_reset_failed">Reset WisCore failed</string>
    <string name="main_scan_no_device">Can not find WisCore, please click \'+\' icon to add a new WisCore</string>
    <string name="main_add_step1_title">Add a new WisCore</string>
    <string name="main_add_step1_text">Make sure your WisCore is power on. According to the prompt sound, until the WLAN LED breath will turn blue. If the light is not blue, please press the factory reset button. Then continue.</string>
    <string name="main_add_step1_check">The LED status is blue</string>
    <string name="main_add_step1_check_first">Please check the LED status first</string>
    <string name="main_add_step1_btn">Continue</string>
    <string name="main_add_step2_note">Go to your Wi-Fi setting on this iphone(ipad) and select the network of the format \"WisCore_xxxxxx\". It may take up a minute to display.Wait until WisCore says you are connected, then return here.</string>
    <string name="main_add_step2_settings_btn">Go Settings</string>
    <string name="main_add_step2_contine_btn">Continue</string>
    <string name="main_add_step2_connected_failed">Check phone connected to WisCore first</string>
    <string name="main_add_step3_ssid_label">Select Wi-Fi network</string>
    <string name="main_add_step3_psk_label">Enter the password</string>
    <string name="main_add_step3_contine_btn">Continue</string>
    <string name="main_add_step3_switch_btn">Switch to other network</string>
    <string name="main_add_wait_label1">Connect to the network</string>
    <string name="main_add_wait_label2">It will take a few minutes, please wait...</string>
    <string name="main_add_end_failed_label1">Can not connect to the network</string>
    <string name="main_add_end_failed_label2">1.Check the password is correct. If not, please try again!\n2.Check the phone have connected to the network have configured. If not, please go setttings to switch network!</string>
    <string name="main_add_end_success_label1">Successful</string>
    <string name="main_add_end_success_label2">Enjoy the new board now!</string>
    <string name="main_add_end_success_btn">Let\'s go!</string>
    <string name="main_add_end_failed_btn">Try again!</string>
    <string name="main_device_device_info">Device Information</string>
    <string name="main_device_network_info">Network Information</string>
    <string name="main_device_amazon_info">Amazon Alexa</string>
    <string name="main_information_name">Device Name</string>
    <string name="main_information_sn">SN</string>
    <string name="main_information_fw">FW Version</string>
    <string name="main_network_ssid">SSID</string>
    <string name="main_network_update">Update Wi-Fi</string>
    <string name="main_network_mac">MAC Address</string>
    <string name="main_network_ip">IP Address</string>
    <string name="main_network_ip_info">IPV4:</string>
    <string name="main_network_ip_mask">Subnet Mask:</string>
    <string name="main_network_ip_gateway">Gateway:</string>
    <string name="main_network_ip_dns">DNS:</string>
    <string name="main_login_step1_title">Alexa</string>
    <string name="main_login_step1_skip">Skip</string>
    <string name="main_login_step1_note1">Your device includes access to Alexa.Connect your Amazon account to access personalized features.</string>
    <string name="main_login_step1_note2">Alexa allows you to use your voice to play music and get news, sports scores, weather and more, all hands-free. All you have to do is ask Alexa.</string>
    <string name="main_login_step1_btn">Sign in with Amazon</string>
    <string name="main_login_step1_check_title">Request to sign in</string>
    <string name="main_login_step1_check_text">Requesting to sign in with Amazon...</string>
    <string name="main_login_step1_check_failed">Request to sign in failed</string>
    <string name="main_login_step1_send_title">Sign in</string>
    <string name="main_login_step1_send_text">Signing in...</string>
    <string name="main_login_step1_send_failed">Sign in failed</string>
    <string name="main_logout_title">Things to try</string>
    <string name="main_logout_sign_out">Sign Out</string>
    <string name="main_logout_sign_out_title">Sign out</string>
    <string name="main_logout_sign_out_text">Sign out...</string>
    <string name="main_logout_sign_out_failed">Sign Out failed</string>
    <string name="main_logout_note">Here are some of the many things you can ask Alexa</string>
    <string name="main_logout_ask1">       Alexa, what\'s the weather?</string>
    <string name="main_logout_ask2">  Alexa, play my flash briefing.</string>
    <string name="main_logout_ask3">       Alexa, what time is it now?</string>
    <string name="main_logout_ask4">  Alexa, set a timer for 20 mins</string>
    <string name="main_logout_info">To learn more and access additional features,\ndownload the Alexa APP.</string>
    <string name="main_list_delete">Delete</string>
    <string name="add_device_ap_connect_title">Connect WisCore</string>
    <string name="add_device_ap_connect_text">Connecting WisCore...</string>
    <string name="add_device_ap_connect_failed">Failed,check phone connected to WisCore</string>
    <string name="delete_device_dialog_text">Are you sure to delete this device?</string>
    <string name="delete_device_dialog_hint">Input new name</string>
    <string name="delete_device_name_error">Device name can not be empty</string>
    <string name="delete_device_dialog_cancel">Cancel</string>
    <string name="delete_device_dialog_ok">Yes</string>
    <string name="check_network_dialog_title">Configure complete</string>
    <string name="check_network_dialog_text1">Please let phone connect to: </string>
    <string name="check_network_dialog_text2"> have configured</string>
    <string name="check_network_dialog_cancel">Next</string>
    <string name="check_network_dialog_ok">Yes</string>
    <string name="device_not_online">The device is not online in local</string>
</resources>
