<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground">
        <com.rak.wiscore.component.MainMenuButton
            android:id="@+id/ap_add_end_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/back_nor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_add_step1_title"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textSize="@dimen/activity_choose_module_title_size"
            android:textColor="@color/colorChooseModuleTitle"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite">
        <ImageView
            android:id="@+id/ap_add_end_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:src="@drawable/add_successful"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.7">
            <TextView
                android:id="@+id/ap_add_end_txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:text="@string/main_add_end_success_label1"
                android:textSize="@dimen/activity_add_module_text_size"
                android:textColor="@color/colorEndTextColor"/>

            <TextView
                android:id="@+id/ap_add_end_txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:text="@string/main_add_end_success_label2"
                android:textSize="@dimen/activity_choose_module_type_size"
                android:textColor="@color/colorEndText2Color"/>
        </LinearLayout>
        <Button
            android:id="@+id/ap_add_end_settings_btn"
            android:layout_marginTop="20dp"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/activity_choose_module_type_size"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/settings_selector"
            android:text="@string/main_add_step2_settings_btn"
            android:textColor="@drawable/add_settings_text_selector"
            />
        <Button
            android:id="@+id/ap_add_end_continue_btn"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/activity_choose_module_type_size"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/continue_selector"
            android:text="@string/main_add_end_success_btn"
            android:textColor="@color/colorTextColor"
            />
    </LinearLayout>

</LinearLayout>
