<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDeviceBackgroundBody">
            <com.rak.wiscore.component.MainMenuButton
                android:id="@+id/alexa_sign_out_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/back_nor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_logout_title"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:textSize="@dimen/activity_choose_module_title_size"
                android:textColor="@color/colorChooseModuleTitle"/>

            <TextView
                android:id="@+id/alexa_sign_out_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/main_logout_sign_out"
                android:textSize="@dimen/activity_choose_module_type_size"
                android:textColor="@drawable/sign_out_selector"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_gravity="center"
                android:src="@drawable/alexa_logo"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.7"
                android:background="@color/colorWhite">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:gravity="center"
                    android:text="@string/main_logout_note"
                    android:textSize="@dimen/activity_add_module_text_size"
                    android:textColor="@color/colorTextColor"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/cyan">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="30dp"
                        android:gravity="center_vertical"
                        android:text="@string/main_logout_ask1"
                        android:textSize="@dimen/activity_choose_module_type_size"
                        android:textColor="@color/colorWhite"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/bule_gray">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/main_logout_ask2"
                        android:textSize="@dimen/activity_choose_module_type_size"
                        android:textColor="@color/colorWhite"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/cyan">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="30dp"
                        android:gravity="center_vertical"
                        android:text="@string/main_logout_ask3"
                        android:textSize="@dimen/activity_choose_module_type_size"
                        android:textColor="@color/colorWhite"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/bule_gray">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/main_logout_ask4"
                        android:textSize="@dimen/activity_choose_module_type_size"
                        android:textColor="@color/colorWhite"
                        />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="1dp"
                android:background="@color/colorAlexaLineBackground"/>
            <TextView
                android:id="@+id/alexa_sign_out_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="5dp"
                android:gravity="center"
                android:text="@string/main_logout_info"
                android:textSize="@dimen/activity_choose_module_btn_size"
                android:textColor="@color/colorAlexaNoteBackground"
                />
        </LinearLayout>
    </LinearLayout>
    <com.rak.wiscore.component.Loading
    android:id="@+id/sign_out_loading"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">
    </com.rak.wiscore.component.Loading>
</RelativeLayout>
