<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground">
        <com.rak.wiscore.component.MainMenuButton
            android:id="@+id/ap_add_step1_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/back_nor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_add_step1_title"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textSize="@dimen/activity_choose_module_title_size"
            android:textColor="@color/colorChooseModuleTitle"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:src="@drawable/light_show"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.7"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_vertical"
            android:text="@string/main_add_step1_text"
            android:textSize="@dimen/activity_choose_module_type_size"
            android:textColor="@color/colorTextColor"/>

        <LinearLayout
            android:id="@+id/ap_add_step1_check_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/ap_add_step1_check_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/remember_nor"
                />
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/main_add_step1_check"
                android:textSize="@dimen/activity_choose_module_type_size"
                android:textColor="@color/colorTextColor"/>
        </LinearLayout>

        <Button
            android:id="@+id/ap_add_step1_continue_btn"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:enabled="false"
            android:textSize="@dimen/activity_choose_module_type_size"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/continue_selector"
            android:text="@string/main_add_step1_btn"
            android:textColor="@color/colorTextColor"
            />
    </LinearLayout>

</LinearLayout>
