<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">
    <RelativeLayout
        android:id="@+id/sign_in_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDeviceBackgroundBody">
        <com.rak.wiscore.component.MainMenuButton
            android:id="@+id/alexa_sign_in_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/back_nor"/>
        <TextView
            android:id="@+id/device_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_login_step1_title"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textSize="@dimen/activity_choose_module_title_size"
            android:textColor="@color/colorChooseModuleTitle"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@+id/sign_in_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_gravity="center"
            android:src="@drawable/alexa_logo"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.7"
            android:background="@color/colorWhite">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/main_login_step1_note1"
                android:textSize="@dimen/activity_add_module_text_size"
                android:textColor="@color/colorTextColor"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="20dp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/main_login_step1_note2"
                android:textSize="@dimen/activity_choose_module_type_size"
                android:textColor="@color/colorAlexaNoteBackground"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/alexa_sign_in_btn"
                android:layout_marginBottom="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="@dimen/activity_choose_module_type_size"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/continue_selector"
                android:text="@string/main_login_step1_btn"
                android:textColor="@color/colorWhite"
                />
        </LinearLayout>
    </LinearLayout>
    <com.rak.wiscore.component.Loading
        android:id="@+id/sign_in_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
    </com.rak.wiscore.component.Loading>
</RelativeLayout>
