<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground">
        <com.rak.wiscore.component.MainMenuButton
            android:id="@+id/ap_add_step2_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/back_nor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_add_step1_title"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textSize="@dimen/activity_choose_module_title_size"
            android:textColor="@color/colorChooseModuleTitle"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:scaleType="fitXY"
            android:src="@drawable/tip"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:background="@color/colorWhite">

            <TextView
                android:id="@+id/ap_add_step2_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:text="@string/main_add_step2_note"
                android:textSize="@dimen/activity_choose_module_type_size"
                android:textColor="@color/colorTextColor"/>
        </LinearLayout>

        <Button
            android:id="@+id/ap_add_step2_settings_btn"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/activity_choose_module_type_size"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/settings_selector"
            android:text="@string/main_add_step2_settings_btn"
            android:textColor="@drawable/add_settings_text_selector"
            />

        <Button
            android:id="@+id/ap_add_step2_continue_btn"
            android:layout_marginBottom="40dp"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/activity_choose_module_type_size"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_add_step2_settings_btn"
            android:background="@drawable/continue_selector"
            android:textColor="@color/colorTextColor"
            />
    </LinearLayout>

</LinearLayout>
